# emgen

./: .gitdepends  .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  README.md
src/: linq.h  main.cpp  ranges.h
src/cppast/: extensions.h
src/emgen/: generators.h  helpers.h
src/utilities/: functional.h  string.h
